fix restaurant overflow restaurant description

--- a/src/styles/__restaurant.scss
+++ b/src/styles/__restaurant.scss
@@ -60,12 +60,12 @@
       }
 
       .restaurant__description {
-        padding: 5px 10px;
+        padding: 3px 10px;
         overflow: hidden;
         text-overflow: ellipsis;
         display: -webkit-box;
-        -webkit-line-clamp: 5; /* number of lines to show */
-        line-clamp: 5;
+        -webkit-line-clamp: 7; /* number of lines to show */
+        line-clamp: 7;
         -webkit-box-orient: vertical;
       }
     }
